@@ -14,8 +14,15 @@ int main (void)
   PASS_CFEQ(str1, constant1, "String is replaced correctly.");
   
   str2 = CFStringCreateMutableCopy (NULL, CFStringGetLength(str1), str1);
+  
   CFStringUppercase (str2, NULL);
   PASS_CFEQ(str2, __CFStringMakeConstantString("TESTING!"), "Uppercase mapping works.");
+  
+  CFStringLowercase (str2, NULL);
+  PASS_CFEQ(str2, constant1, "Lowercase mapping works"); // Reversed.
+  
+  CFStringCapitalize (str2, NULL);
+  PASS_CFEQ(str2, __CFStringMakeConstantString("Testing!"), "Capitalize mapping works.");
   
   CFRelease(str1);
   CFRelease(str2);
@@ -25,6 +32,12 @@ int main (void)
   CFStringTrimWhitespace (str1);
   PASS_CFEQ(str1, __CFStringMakeConstantString("test"),
     "String is trimmed correctly.");
+  
+  CFStringReplace (str1, CFRangeMake(1, 3), constant1);
+  PASS_CFEQ(str1, __CFStringMakeConstantString("ttesting!"),
+    "String replacement works");
+  
+  CFRelease(str1);
   
   return 0;
 }
